samples/_failures_safe/1761128722_e9d948_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88833a2b.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_88833a2b.c:145:9: error: expected declaration or statement at end of input
  145 |         lexer->column++;
      |         ^~~~~
./samples/SAFE/__tmp_88833a2b.c:145:9: error: expected declaration or statement at end of input
